# pyzync

./: .gitignore  .style.yapf  .yapfignore  AGENTS.md  README.md  backup.sh  backup_script.py  example.backup.py  example.env  example_backup.py  example_backup.sh  example_restore.py  main.py  pyproject.toml  pyzync.code-workspace  requirements.txt
pyzync/: __main__.py  backup.py  errors.py  host.py  interfaces.py  logging.py  managers.py  otel.py  pruning.py  retention_polcies.py  retention_policies.py  rotate.py  storage_adapters.py  streaming.py  sync.py
pyzync/retention/: interfaces.py
pyzync/retention/policies/: last_n_days.py  rolling.py
pyzync/storage/: interfaces.py
pyzync/storage/adapters/: dropbox.py  file.py
tests/: node_diagram.drawio  test_backup.py  test_host.py  test_interfaces.py  test_loop_checks.py  test_managers.py  test_retention_policy.py  test_storage.py  test_storage_adapters.py  test_streaming.py
tests/local_storage_adapter_files/tank0/foo/: 20250122.zfs  20250122_20250123.zfs  20250123_20250124.zfs  20250124_20250125.zfs  20250125_20250126.zfs
